@@ -166,33 +166,35 @@ Each variable definition below contains one or more examples.
 <td><a href="#SMTP_MAX_SESSIONS_PER_CONNECTION">SMTP_MAX_SESSIONS_PER_CONNECTION</a></td>
 </tr>
 <tr>
+<td><a href="#SUMMARY_HEADERS">SUMMARY_HEADERS</a></td>
 <td><a href="#TAGS_CONFIRM">TAGS_CONFIRM</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_DATED">TAGS_DATED</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_KEYWORD">TAGS_KEYWORD</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_SENDER">TAGS_SENDER</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_DIR">TEMPLATE_DIR</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_DIR_MATCH_SENDER">TEMPLATE_DIR_MATCH_SENDER</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_EMAIL_HEADERS">TEMPLATE_EMAIL_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_ENCODED_HEADERS">TEMPLATE_ENCODED_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#TERSE_SUMMARY_HEADERS">TERSE_SUMMARY_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TIMEOUT">TIMEOUT</a></td>
-</tr>
-<tr>
 <td><a href="#USERNAME">USERNAME</a></td>
-<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 </tr>
 <tr>
+<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 <td><a href="#VIRTUALDOMAINS">VIRTUALDOMAINS</a></td>
-<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </tr>
+<tr>
+<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </table>
 
 <dl>
@@ -1150,6 +1152,19 @@ great than 0 and TMDA will close the SMTP connection and re-open it
 after this number of consecutive sessions.
 <br><br>
 Default is 0
+<dt><hr>
+<a name="SUMMARY_HEADERS"><h4>SUMMARY_HEADERS</h4></a>
+<dd>
+A list containing one or more message headers that should be
+displayed by tmda-pending's interactive mode. Listed headers are
+case-insensitive.
+<br><br>
+Examples:
+<br><br>
+<code>SUMMARY_HEADERS = ['from', 'subject', 'x-spam-status']</code><br>
+<code>SUMMARY_HEADERS = ['date', 'from', 'to', 'subject']</code>
+<br><br>
+Default is Date, From, To, and Subject.
 <dt><hr>
 <a name="TAGS_CONFIRM"><h4>TAGS_CONFIRM</h4></a>
 <dd>
