@@ -1,3 +1,8 @@
+2002-11-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* tmda-pending (main): Display Defaults.SUMMARY_HEADERS during
+	interactive mode.
+	
 2002-11-03  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>
 
 	* tmda-inject (inject_message): Add Version.CODENAME to
